Third Restaurant Attempt
Followed the directions in Lab V3. I improved the alignment on the Form page and simplified HTML code using CSS. The Form page still does not exactly match the wireframe. I had to move on to the next assignment though.

--- a/Cajun p2.html
+++ b/Cajun p2.html
@@ -13,36 +13,49 @@
   	 <div id="Links">
 	<a href="Resturant p1">Home</a><span></span><a href="Menu Page">Menu</a><span></span><a href="Contact Us"> Contact Us </a>
     	
-   <hr>
 	</div>
 	   <body>
-	  
-            
+	  	<style>
+		#page{
+		   background-color: AliceBlue;
+            	    }
+		 h2 {
+		   font-weight: bold;
+		   text-align: center;
+		    }
+	     #whodat{
+		    text-align: center;
+		    }
+		</style>
+<div id="page">
+    <hr>
 		<img style="position:absolute; top:100px; right:350px; left:420px; bottom: 20px" src="https://s-media-cache-ak0.pinimg.com/736x/c0/eb/45/c0eb45c9d7e6ee1e9ba78e3ccd2d60a8.jpg">
-		<br/>
-		<br/>
-		<br/>
-		<br/>
-		<br/>
-		<br/>
-		<br/>
-		<br/>
-		<br/>
-	    	<br/>
-		<br/>
-		<br/>
-		<center><h2><b>Resturant Description</b></h2>
-		<p> A Louisiana themed resturant featuring Cajun and Southern cuisine. We make everything from scratch
+		</br>
+		</br>
+		</br>
+		</br>
+		</br>
+		</br>
+		</br>
+		</br>
+		</br>
+		</br>
+		</br>
+		</br>
+		<h2>Resturant Description</h2>
+		<p id="whodat"> A Louisiana themed resturant featuring Cajun and Southern cuisine. We make everything from scratch
 		    here to preserve both the spirit and quality of our food. Wedo the best we can to use local 
 		    ingrediants, including locally supplied crawdads. Happy Hours starts at 4:00pm and last until 
 	            7:00pm. We love friends, like us on Facebook! </p>
-	  </center>
-	</body>
+	 
+	 <hr>
     </div>
-<hr>
+
     <div id="Footer">
 	
 		 <p> Phillip Fulmer Way, Knoxville, TN 37916 </p>
 		 <p> (502) 555-7777 </p>   
 	
     </div>
+   </body>
+</html>
