--- a/cajun page1.2.try.html
+++ b/cajun page1.2.try.html
@@ -16,15 +16,18 @@
 	</div>
         <hr>
 		<style>
+			body{
+			     background-color: AliceBlue;
+		             }
 			table{
 			     table-layout: fixed;
 			     vertical-align: middle;
 			     margin: 5px 0px 200px 0px;
 			     }
-			   h3{
-			     font-weight: bold;
-			     font-size: 14px;
-			     text-align: center;
+			   h2{
+
+			     font-size: 18px;
+
 			     }
 			   tr{
 			      width: 50%;
@@ -40,44 +43,45 @@
 	   <Table>		
 	        <tr>
 	           <td>
-	    		  <h3>Fried Gator Tail</h3> 
+	    		  <h2>Fried Gator Tail</h2> 
 		             Fried gator tail rolled
 			   into balls, served with our
 			      sweet potato fries.
 			          $5.50 
        	   </td>
 	   <td> 
-	 		  <h3>Po' Boy Sandwich</h3>                                    
+	 		  <h2>Po' Boy Sandwich</h2>                                    
 		 	    The chef's favorite dish!
 			 Classic cajun sandwich made with 
 		        your choice of fried shrimp or catfish.  
 				   $7.95  			
            </td>
 	   <td> 
-	                     <h3>Etouffee</h3> 
+	                     <h2>Etouffee</h2> 
 			  Traditional Etoufee, 
 		         made with local crawdads
 		         on a bed of white rice.  
 				   $7.95
 	  </td>
           </tr>
-	
+
+	  <tr>
         <td> 
-	   		      <h3>Jambalaya</h3> 
+	   		      <h2>Jambalaya</h2> 
         		 Made with sausage, pork, chicken, 
 	    		 and local crawdads. Comes with a 
 			    side of sweet potato fries. 
 				    $6.75 
      	</td>
         <td> 
-	     	 <h3>All you can eat Crawdads and Redbeans</h3> 
+	     	 <h2>All you can eat Crawdads and Redbeans</h2> 
 		        Cradads by the bucket!
 			 Comes with redbeans 	
 	                     and rice.  
 			       $7.95
 	</td>
         <td> 
-	     		      <h3>Catfish Plate</h3> 
+	     		      <h2>Catfish Plate</h2> 
 	           	 A huge cut of catfish, deep fried
 	                    to prefection. Comes with 
 			     our sweet potato fries.  
