--- a/My Greek Resturnat/NewResturnat.html
+++ b/My Greek Resturnat/NewResturnat.html
@@ -3,9 +3,9 @@
 	 <Head>
 	 <Title>
 		    Menu Page 
-		</Title>
-	   <div id="Head">
+		</Title
 		<h1> Christopheros's Greek Taberna</h1>
+	   <div id="Header">	
 	 <link rel="stylesheet" type="text/css" href="resturnatStyle.css" title="style">
 	   </div>
 	   <style>
@@ -40,8 +40,8 @@
 	 </Head>
 	    
 	<hr>
-	<div id="links">
-	<a href="ResturnatPages"><u>Home</u></a> <a href="NewResturant"><u>Menu</u></a> <a href="NewResturnatPage"><u> Contact Us <u/> </a>
+	<div id="Links">
+	<a href="ResturnatPages"><u><span class="glyphicons glyphicons-home"></span></u></a> <a href="NewResturant"><u>Menu</u></a> <a href="NewResturnatPage"><u> Contact Us <u/> </a>
 	</div>
         <hr>
 		
@@ -116,9 +116,6 @@
 	
         <td> 
 	   		      <h3>Frape</h3> 
-        		 A cold coffee drink with nesquick. 
-				 This coffee is strong, so it comes
-				 with a water bottle to water down.
 				    $3.75 
      	</td>
         <td> 
@@ -133,10 +130,8 @@
      </table>
 <hr>
    <div id="Footer">
-	
 		 <p> Phillip Fulmer Way, Knoxville, TN 37916 </p>
 		 <p> (502) 555-7777 </p>
-	
     </div>
  </body>
-</html>
+</HTML>
