--- a/My Greek Resturnat/NewResturnatpage.html
+++ b/My Greek Resturnat/NewResturnatpage.html
@@ -49,14 +49,12 @@
 					line-height: 1.4;
 					text-align: justify;
 					}
-					
-					
 	       		 </style>
 	    </Head>
 	<h1> Christopheros's Greek Taberna </h1>
 	<hr>
-   <div>
-	<a href="ResturnatPages"><u>Home</u></a> <a href="NewResturant"><u>Menu</u></a> <a href="NewResturnatPage"><u> Contact Us <u/> </a>
+   <div id="Links">
+	<span class="glyphicons glyphicons-home"><a href="ResturnatPages"></a></span> <a href="NewResturant"><u>Menu</u></a> <a href="NewResturnatPage"><u> Contact Us <u/> </a>
    </div>
         <hr>
 	   <body>
@@ -83,13 +81,10 @@
 		<textarea name="Additional Information"></textarea><br/>
     		<input type="submit"/><br/>	
 	</form>
-<hr>
-<br>
-   <div>
-	    <center>
+
+  <div id="Footer">
 		 <p> Phillip Fulmer Way, Knoxville, TN 37916 </p>
 		 <p> (502) 555-7777 </p>
-	    </center>
     </div>		
 </body>	
 </HTML>
