--- a/My Greek Resturnat/ResturnatPages.html
+++ b/My Greek Resturnat/ResturnatPages.html
@@ -1,16 +1,15 @@
 ﻿<!DOCTYPE HTML>
 	<HTML lang="eng">
-		
 		    <Head> 
 			<Title>
 			Home Page 
 			</Title>
 			</Head>
-
 	<h1> Christopheros's Greek Taberna </h1>
-   <div>
-	<a href="ResturnatPages"><u>Home</u></a> <a href="NewResturant"><u>Menu</u></a> <a href="NewResturnatPage"><u> Contact Us <u/> </a>
-    <div>
+   <div id="Links">
+	<a href="ResturnatPages"><u><span class="glyphicons glyphicons-home"></span></u></a> <a href="NewResturant"><u>Menu</u></a> <a href="NewResturnatPage"><u> Contact Us <u/> </a>
+    </div>
+
 	<body>
          <center>
 		<p><img src="1200px-Naxos_Taverna.jpg"></p>
@@ -19,13 +18,11 @@
 		    here to preserve both the spirit and quality of our food. Happy Hours starts at 4:00pm and lasts until 
 	            7:00pm. We love friends, so please, like us on Facebook! </p>
 	  </center>
-	</body>
-    </div>
-    <div>
-	<body>
-	    <Center>
+
+
+    <div id="Footer">
 		 <p> Phillip Fulmer Way, Knoxville, TN 37916 </p>
 		 <p> (502) 555-7777 </p>
-	    </center>
-	</body>
     </div>
+	</body>
+	</HTML>
