--- a/menuPage.html
+++ b/menuPage.html
@@ -12,7 +12,7 @@
 
     			 text-align: center;
 			     font-weight: normal;
-			     font-size: 14px;
+			     font-size: 16px;
 				 }
 				 tbody tr:nth-child(even) {
                   background-color: RoyalBlue;
@@ -21,6 +21,7 @@
                  background-color: white;
 			     }
 			 th{
+				 background-color: AliceBlue;
 			 	 text-align:center;
 				 font-weight:bold;
 			 }
@@ -123,7 +124,7 @@
 	 <div id="table1">
 	   <table>		
 	    <tr>
-	     <th align=center style=font-size:18px colspan="3"> Entrees </th>
+	     <h2><th style=font-size:20px colspan="3"> Entrees </th></h2>
 		 </tr>
 	        <tr>
 	           <td>
@@ -180,34 +181,35 @@
 	 <table align="center">		
 	        <thead>
 			<tr>
-			<th align="center" font-size=18px colspan="3">Beverages</th>
+			<h2><th style=font-size:20px colspan="3">Beverages</th></h2>
 			</tr>
 			</thead>
-	        <tr>
+	        <tr colspan="3">
 	   <td>
-	    	 <h3> SG Ale  </h3> 
-			       <p> $1.50 </p> 
+	    	 <h3>SG Ale </h3> 
+			       <h4> $1.50 </h4> 
+       </td>
+	   <td>  
+				 <h3>Coke </h3> 
+			<h4>$1.25</h4>
        </td>
 	   <td> 
-	 		  <h3> SG Brew </h3>                                    
-				   <p>$1.95</p>  			
-       </td>
-	   <td> 
-	         <h3> Coke </h3> 
-			<p>$1.25</p>
+	     <h3>SG Brew </h3>                                    
+		    <h4>$1.95</h4> 
 	   </td>
        </tr>
+	   <tr colspan="3">
       <td> 
-	         <h3> Frape </h3> 
-			<p>$3.75</p> 
+	         <h3>Frape </h3> 
+			<h4>$3.75</h4> 
       </td>
       <td> 
-	     	 <h3> Coffee </h3> 
-			       <p>$1.95</p>
+	     	 <h3>Coffee </h3> 
+			  <h4>$1.95</h4>
 	  </td>
       <td> 
-	        <h3> Cappacino </h3> 
-				   <p>$2.50</p>
+	        <h3>Cappacino </h3> 
+				   <h4>$2.50</h4>
 	</td>
       </tr>
      </table>
